Fix layout shifts
learning new things here (set w and h to images to prevent layout shifts!)

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -432,6 +432,14 @@ div.tags {
     padding-bottom: 50px;
   }
 
+  a.project {
+    img {
+      width: 90vw;
+      height: auto;
+      background-color: #000;
+    }
+  }
+
   html {
     p {
       text-align: left;
